# Ascendancy

./: .travis.yml  Ascendancy.cpp  CMakeLists.txt  ProjectFiles.cmake  README.md
data/Tower/towers/: BasicTower.xml
data/projectiles/: BasicProjectile.xml
include/: EntityFramework.hpp  GUI.hpp  Game.hpp  Hex.hpp  Infrastructure.hpp  Tower.hpp  Utility.hpp
include/EntityFramework/: Entity.hpp  EntityController.hpp  EntityEvent.hpp  EntityManager.hpp  EntityRepresentation.hpp  EntityRepresentationManager.hpp  EntityResource.hpp
include/GUI/: GuiDesktop.hpp  Panel.hpp
include/Game/: Level.hpp  LevelInteraction.hpp  Tile.hpp
include/Game/Controllers/: SingleTargetTowerController.hpp
include/Game/DataAccess/: DataAccessManager.hpp  TowerDataAccess.hpp
include/Game/Entities/: SingleTargetTower.hpp  Tower.hpp
include/Game/Representations/: SingleTargetTowerRepresentation.hpp
include/Game/Resources/: SingleTargetTowerResource.hpp
include/Game/Scenes/: LevelScene.hpp
include/Hex/: Hex.hpp  HexUtility.hpp
include/Infrastructure/: Application.hpp  Camera2D.hpp  FontManager.hpp  Scene.hpp  SceneManager.hpp  TextureManager.hpp
include/Tower/: Level.hpp  LevelInteraction.hpp  Tile.hpp
include/Tower/Controllers/: SingleTargetTowerController.hpp
include/Tower/DataAccess/: DataAccessManager.hpp  TowerDataAccess.hpp
include/Tower/Entities/: SingleTargetTower.hpp  Tower.hpp
include/Tower/Factory/: TowerFactory.hpp
include/Tower/GUI/: Element.hpp  Panel.hpp
include/Tower/Representations/: SingleTargetTowerRepresentation.hpp
include/Tower/Resources/: SingleTargetTowerResource.hpp
include/Tower/Scenes/: LevelScene.hpp
include/Utility/: Signal.hpp  StringHelpers.hpp  XML.hpp
src/EntityFramework/: Entity.cpp  EntityController.cpp  EntityManager.cpp  EntityRepresentation.cpp  EntityRepresentationManager.cpp  EntityResource.cpp
src/GUI/: Element.cpp  GuiDesktop.cpp  Panel.cpp
src/Game/: Level.cpp  LevelInteraction.cpp  Tile.cpp
src/Game/Controllers/: SingleTargetTowerController.cpp
src/Game/DataAccess/: DataAccessManager.cpp  TowerDataAccess.cpp
src/Game/Entities/: SingleTargetTower.cpp  Tower.cpp
src/Game/Representations/: SingleTargetTowerRepresentation.cpp
src/Game/Resources/: SingleTargetTowerResource.cpp
src/Game/Scenes/: LevelScene.cpp
src/Hex/: Hex.cpp  HexUtility.cpp
src/Infrastructure/: Application.cpp  Camera2D.cpp  FontManager.cpp  Scene.cpp  SceneManager.cpp  TextureManager.cpp
src/Tower/: Level.cpp  LevelInteraction.cpp  Tile.cpp
src/Tower/Controllers/: SingleTargetTowerController.cpp
src/Tower/DataAccess/: DataAccessManager.cpp  TowerDataAccess.cpp
src/Tower/Entities/: SingleTargetTower.cpp  Tower.cpp
src/Tower/Factory/: TowerFactory.cpp
src/Tower/Representations/: SingleTargetTowerRepresentation.cpp
src/Tower/Resources/: SingleTargetTowerResource.cpp
src/Tower/Scenes/: LevelScene.cpp
src/Utility/: StringHelpers.cpp  XML.cpp
test/: IntegrationTest.cpp  TestTest.cpp
test/EntityFramework/: EntityManagerTests.cpp  EntityRepresentationManagerTests.cpp  EntityRepresentationTests.cpp  EntityTests.cpp
test/Game/DataAccess/: TowerDataAccessTests.cpp
test/Integration/include/Controllers/: BasicAIController.hpp  BasicController.hpp  BasicKeyboardController.hpp
test/Integration/include/Entities/: BasicBallEntity.hpp
test/Integration/include/Representations/: BasicBallRepresentation.hpp
test/Integration/include/Resources/: BasicBallResource.hpp
test/Integration/include/Scenes/: HexTestScene.hpp  IntegrationTestScene.hpp
test/Integration/src/Controllers/: BasicAIController.cpp  BasicController.cpp  BasicKeyboardController.cpp
test/Integration/src/Entities/: BasicBallEntity.cpp
test/Integration/src/Representations/: BasicBallRepresentation.cpp
test/Integration/src/Resources/: BasicBallResource.cpp
test/Integration/src/Scenes/: HexTestScene.cpp  IntegrationTestScene.cpp
test/Tower/DataAccess/: TowerDataAccessTests.cpp
test/Tower/Factory/: TowerFactoryTests.cpp
test/Utility/: SignalTests.cpp  StringHelpersTests.cpp  XMLTests.cpp
