CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Ascendancy)

if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
	MESSAGE(STATUS "Clang system/compiler detected")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")

elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
	MESSAGE(STATUS "G++ system/compiler detected")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
		MESSAGE(STATUS "Intel system/compiler detected")
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL ${MSVC})

	ADD_DEFINITIONS(-DNOMINMAX -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_DEPRECATE)

	SET(THIRD_PARTY_LIBS ${THIRD_PARTY_LIBS}
	)

	SET(SFML_ROOT "C:/Libraries/SFML-2.4.2")
	SET(SFML_STATIC_LIBRARIES TRUE)

endif()

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	${CMAKE_SOURCE_DIR}/cmake_modules
)

# Currently always making static LOCAL_LIBS and linking to static SFML
SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")

# Determine what type of library (Debug/Release) to build
if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Debug)
    set(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

else(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Release)

endif()

INCLUDE(${CMAKE_SOURCE_DIR}/ProjectFiles.cmake)

FIND_PACKAGE(SFML 2 REQUIRED graphics window system)
IF(NOT SFML_FOUND)
	MESSAGE( FATAL_ERROR "Could not find SFML 2.X" )
ENDIF()

INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/)


SET(LOCAL_LIBS ${LOCAL_LIBS}
)

SET(ALL_LIBS ${ALL_LIBS}
	${LOCAL_LIBS}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
)

GET_DIRECTORY_PROPERTY( DirDefs DIRECTORY ${CMAKE_SOURCE_DIR} COMPILE_DEFINITIONS )
FOREACH( d ${DirDefs} )
    MESSAGE( STATUS "Definition: " ${d} )
ENDFOREACH()
FOREACH( l ${THIRD_PARTY_LIBS} )
    MESSAGE( STATUS "Third Party Library: " ${l} )
ENDFOREACH()
FOREACH( l ${LOCAL_LIBS} )
    MESSAGE( STATUS "Local Library: " ${l} )
ENDFOREACH()
FOREACH( l ${SFML_DEPENDENCIES} )
    MESSAGE( STATUS "SFML Dependency: " ${l} )
ENDFOREACH()


ADD_EXECUTABLE(Ascendancy Ascendancy.cpp)
TARGET_LINK_LIBRARIES(Ascendancy LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(Test test/Test.cpp ${TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(Test LINK_PUBLIC ${ALL_LIBS})