CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(Ascendancy)

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
	MESSAGE(STATUS "Clang system/compiler detected")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")

ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
	MESSAGE(STATUS "G++ system/compiler detected")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
	MESSAGE(STATUS "Intel system/compiler detected")

ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL ${MSVC})
	MESSAGE(STATUS "Microsoft system/compiler detected")
	ADD_DEFINITIONS(-DNOMINMAX -DWIN32_LEAN_AND_MEAN -D_CRT_SECURE_NO_DEPRECATE -DASC_WIN32)

	SET(SFML_ROOT "C:/Libraries/SFML-2.4.2")
	SET(SFML_STATIC_LIBRARIES TRUE)

ENDIF()

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	${CMAKE_SOURCE_DIR}/cmake_modules
)

# Currently always making static LOCAL_LIBS
SET(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-s")

# Determine what type of library (Debug/Release) to build
IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Debug)
    set(LIBRARY_EXTENSION "${LIBRARY_EXTENSION}-d")

ELSE(NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_BUILD_TYPE Release)

ENDIF()

INCLUDE(${CMAKE_SOURCE_DIR}/ProjectFiles.cmake)

FIND_PACKAGE(SFML 2 REQUIRED graphics window system)
IF(NOT SFML_FOUND)
	MESSAGE( FATAL_ERROR "Could not find SFML 2.X" )
ENDIF()

INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdparty/)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/test/Integration/include/ )

# Local Libraries
ADD_LIBRARY(EntityFramework${LIBRARY_EXTENSION}	STATIC ${ENTITY_FRAMEWORK_HEADER_FILES} ${ENTITY_FRAMEWORK_SOURCE_FILES})
ADD_LIBRARY(Game${LIBRARY_EXTENSION}	        STATIC ${GAME_HEADER_FILES}             ${GAME_SOURCE_FILES})
ADD_LIBRARY(GUI${LIBRARY_EXTENSION}	            STATIC ${GUI_HEADER_FILES}              ${GUI_SOURCE_FILES})
ADD_LIBRARY(Hex${LIBRARY_EXTENSION}             STATIC ${HEX_HEADER_FILES}              ${HEX_SOURCE_FILES})
ADD_LIBRARY(Infrastructure${LIBRARY_EXTENSION}  STATIC ${INFRASTRUCTURE_HEADER_FILES}   ${INFRASTRUCTURE_SOURCE_FILES})
ADD_LIBRARY(Utility${LIBRARY_EXTENSION}	        STATIC ${UTILITY_HEADER_FILES}          ${UTILITY_SOURCE_FILES})


SET(LOCAL_LIBS ${LOCAL_LIBS}
	Game${LIBRARY_EXTENSION}
	EntityFramework${LIBRARY_EXTENSION}
	GUI${LIBRARY_EXTENSION}
	Hex${LIBRARY_EXTENSION}
	Infrastructure${LIBRARY_EXTENSION}
	Utility${LIBRARY_EXTENSION}
)

SET(ALL_LIBS ${ALL_LIBS}
	${LOCAL_LIBS}
	${THIRD_PARTY_LIBS}
	${SFML_LIBRARIES}
	${SFML_DEPENDENCIES}
)

GET_DIRECTORY_PROPERTY( CompileDefinitions DIRECTORY ${CMAKE_SOURCE_DIR} COMPILE_DEFINITIONS )
FOREACH( d ${CompileDefinitions} )
    MESSAGE( STATUS "Definition: " ${d} )
ENDFOREACH()
FOREACH( l ${THIRD_PARTY_LIBS} )
    MESSAGE( STATUS "Third Party Library: " ${l} )
ENDFOREACH()
FOREACH( l ${LOCAL_LIBS} )
    MESSAGE( STATUS "Local Library: " ${l} )
ENDFOREACH()
FOREACH( l ${SFML_DEPENDENCIES} )
    MESSAGE( STATUS "SFML Dependency: " ${l} )
ENDFOREACH()

ADD_EXECUTABLE(Ascendancy Ascendancy.cpp)
TARGET_LINK_LIBRARIES(Ascendancy LINK_PUBLIC ${ALL_LIBS})

ADD_EXECUTABLE(Test test/Test.cpp ${TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(Test LINK_PUBLIC ${ALL_LIBS})
ADD_EXECUTABLE(IntegrationTest test/IntegrationTest.cpp ${INTEGRATION_TEST_SOURCE_FILES} ${INTEGRATION_TEST_HEADER_FILES})
TARGET_LINK_LIBRARIES(IntegrationTest LINK_PUBLIC ${ALL_LIBS})